--- a/AgileFileManagerv1/FrameWorkDB/FrameWorkDB.csproj
+++ b/AgileFileManagerv1/FrameWorkDB/FrameWorkDB.csproj
@@ -4,18 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3625F25D-BC3C-4F7E-B94C-5A3E6C6369DD}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>AgileFileManagerv1</RootNamespace>
-    <AssemblyName>AgileFileManagerv1</AssemblyName>
+    <ProjectGuid>{DC9FBD1F-C9A0-4DBB-86E8-BD9CDAB1538A}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>FrameWorkDB</RootNamespace>
+    <AssemblyName>FrameWorkDB</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <WarningLevel>4</WarningLevel>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -86,7 +82,7 @@
     <Reference Include="System.Console, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Console.4.3.0\lib\net46\System.Console.dll</HintPath>
     </Reference>
-    <Reference Include="System.Data" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.3.1\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
@@ -137,218 +133,34 @@
       <HintPath>..\packages\System.Security.Cryptography.X509Certificates.4.3.0\lib\net46\System.Security.Cryptography.X509Certificates.dll</HintPath>
     </Reference>
     <Reference Include="System.Transactions" />
-    <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Xaml">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
     <Reference Include="System.Xml.ReaderWriter, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Xml.ReaderWriter.4.3.0\lib\net46\System.Xml.ReaderWriter.dll</HintPath>
     </Reference>
-    <Reference Include="WindowsBase" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Compile Include="FloatWindows\FW_Client\Controller\FW_Client.xaml.cs">
-      <DependentUpon>FW_Client.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="FloatWindows\FW_Client\Model\VW_Clients.cs" />
-    <Compile Include="WorkingBoard\Controller\WorkingBoardController.cs" />
-    <Compile Include="WorkingBoard\Nodes\WB_ToDo\Controller\WB_ToDoController.cs" />
-    <Compile Include="WorkingBoard\Nodes\WB_ToDo\View\MC_WB_ToDo_Client.xaml.cs">
-      <DependentUpon>MC_WB_ToDo_Client.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\Nodes\WB_ToDo\View\MC_WB_ToDo_Dealer.xaml.cs">
-      <DependentUpon>MC_WB_ToDo_Dealer.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\Nodes\WB_ToDo\View\MC_WB_ToDo_Files.xaml.cs">
-      <DependentUpon>MC_WB_ToDo_Files.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\Nodes\WB_ToDo\View\MC_WB_ToDo_Licenses.xaml.cs">
-      <DependentUpon>MC_WB_ToDo_Licenses.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\Nodes\WB_ToDo\View\MC_WB_ToDo_Report.xaml.cs">
-      <DependentUpon>MC_WB_ToDo_Report.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\Nodes\WB_ToDo\View\NV_WB_ToDo_Main.xaml.cs">
-      <DependentUpon>NV_WB_ToDo_Main.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\Nodes\WB_ToDo\View\TS_WB_ToDo_Main.xaml.cs">
-      <DependentUpon>TS_WB_ToDo_Main.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\View\MC_WB_Finished.xaml.cs">
-      <DependentUpon>MC_WB_Finished.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\View\MC_WB_InProgress.xaml.cs">
-      <DependentUpon>MC_WB_InProgress.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\View\MC_WB_ToDo.xaml.cs">
-      <DependentUpon>MC_WB_ToDo.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\View\MC_WB_ToFinish.xaml.cs">
-      <DependentUpon>MC_WB_ToFinish.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\View\MC_WB_ToTest.xaml.cs">
-      <DependentUpon>MC_WB_ToTest.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\View\NV_WB_Main.xaml.cs">
-      <DependentUpon>NV_WB_Main.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="WorkingBoard\View\TS_WB_ToDo.xaml.cs">
-      <DependentUpon>TS_WB_ToDo.xaml</DependentUpon>
-    </Compile>
-    <Page Include="FloatWindows\FW_Client\Controller\FW_Client.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Page Include="Main\View\MC_Main.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Main\View\NV_Main.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Main\View\TS_Main.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Original\Controller\AgileManagerController.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\Nodes\WB_ToDo\View\MC_WB_ToDo_Client.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\Nodes\WB_ToDo\View\MC_WB_ToDo_Dealer.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\Nodes\WB_ToDo\View\MC_WB_ToDo_Files.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\Nodes\WB_ToDo\View\MC_WB_ToDo_Licenses.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\Nodes\WB_ToDo\View\MC_WB_ToDo_Report.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\Nodes\WB_ToDo\View\NV_WB_ToDo_Main.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\Nodes\WB_ToDo\View\TS_WB_ToDo_Main.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\View\MC_WB_Finished.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\View\MC_WB_InProgress.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\View\MC_WB_ToDo.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\View\MC_WB_ToFinish.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\View\MC_WB_ToTest.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\View\NV_WB_Main.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="WorkingBoard\View\TS_WB_ToDo.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <Compile Include="AgileManagerDB.cs" />
+    <Compile Include="Application.cs" />
+    <Compile Include="Client.cs" />
+    <Compile Include="Dealer.cs" />
+    <Compile Include="Department.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="File.cs" />
+    <Compile Include="Intervention.cs" />
+    <Compile Include="Issue.cs" />
+    <Compile Include="License.cs" />
+    <Compile Include="Priority.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Report.cs" />
+    <Compile Include="State.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Main\Controller\MainController.cs" />
-    <Compile Include="Main\View\MC_Main.xaml.cs">
-      <DependentUpon>MC_Main.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Main\View\NV_Main.xaml.cs">
-      <DependentUpon>NV_Main.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Main\View\TS_Main.xaml.cs">
-      <DependentUpon>TS_Main.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Original\Controller\AgileManagerController.xaml.cs">
-      <DependentUpon>AgileManagerController.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Config\Controller\" />
-    <Folder Include="Config\Model\" />
-    <Folder Include="Config\View\" />
-    <Folder Include="FloatWindows\FW_Client\View\" />
-    <Folder Include="Main\Model\" />
-    <Folder Include="Original\Model\" />
-    <Folder Include="Original\View\" />
-    <Folder Include="WorkingBoard\Model\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FrameWorkDB\FrameWorkDB.csproj">
-      <Project>{dc9fbd1f-c9a0-4dbb-86e8-bd9cdab1538a}</Project>
-      <Name>FrameWorkDB</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
